--- a/assets/style.css
+++ b/assets/style.css
@@ -73,7 +73,7 @@ input["type"="text"] {
     height: 300px;
     border: 5px solid transparent;
     border-radius: 20px;
-    background: black;
+    background:white;
     display: block;
     margin: 0 auto;
     margin-top:10px; 
@@ -112,7 +112,15 @@ padding-right: 10px;
 .navbar {
     margin-bottom: 0;
 }
-
+#pla{
+    width: 25px;
+    height: 25px;
+    //left: 0px;
+}
+#timeIcon{
+    width: 25px;
+    height: 25px;
+}
 #myCarousel {
     margin: 0;
 }
